# k8s-dns

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
app/: config.py  k8s.py  models.py  utils.py
app/providers/: _base.py  cloudflare.py  technitium.py
crds/: dnsrecords.yaml
docker/: Dockerfile  app.py  docker-entrypoint.py
examples/: bookstack.yaml  chrony1.yaml  chrony2.yaml
k8s_dns/: models.py  types.py  utils.py
k8s_dns/providers/: _base.py  cloudflare.py  technitium.py
manifests/: cluster-role-binding.yaml  cluster-role.yaml  role-binding.yaml  role.yaml  service-account.yaml
