[project]
    name = "k8s-dns"
    version = "0.1.2"
    description = "A Kubernetes controller to manage internal and external DNS records"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.13",
    ]
    requires-python = ">=3.9"
    dependencies = [
        "cloudflare>=4.0.0",
        "kopf>=1.37.4",
        "kubernetes>=32.0.0",
        "requests>=2.32.3",
    ]

[dependency-groups]
    dev = ["pre-commit>=3.2.0"]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/k8s-dns"
    Repository = "https://github.com/NathanVaughn/k8s-dns.git"
    Issues     = "https://github.com/NathanVaughn/k8s-dns/issues"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
