[project]
    name = "k8s-dns"
    version = "0.1.6"
    description = "A Kubernetes controller to manage internal and external DNS records"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.13",
    ]
    requires-python = ">=3.12"
    dependencies = [
        "cloudflare>=4.0.0",
        "kopf>=1.37.4",
        "kubernetes>=32.0.0",
        "requests>=2.32.3",
    ]

[dependency-groups]
    dev = ["prek>=0.4.5"]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/k8s-dns"
    Repository = "https://github.com/NathanVaughn/k8s-dns.git"
    Issues     = "https://github.com/NathanVaughn/k8s-dns/issues"

[tool.ruff.lint]
    select = [
        "E",
        "W",
        "F",   # pycodestyle + pyflakes (flake8's defaults)
        "I",   # isort
        "UP",  # pyupgrade
        "N",   # pep8-naming
        "B",   # flake8-bugbear
        "C4",  # flake8-comprehensions
        "PT",  # flake8-pytest-style
        "Q",   # flake8-quotes
        "ISC", # flake8-implicit-str-concat
        "TID", # flake8-tidy-imports
        "FLY", # flynt
        "RUF", # ruff-specific rules
        "ANN", # type annotations
    ]
    ignore = ["ANN401", "E501"]